feat: 調整 前台取得賣家所有資料 api
1. 新增篩選 類型、時長、排序
2. 調整學員數計算方式 > 計算該賣家的訂單總數
3. 新增 取得平均評分
4. 新增 取得評論數量
